[SC-6429] added mask to the phone number in user settings menu, fixed white space when profile tab is chosen

--- a/src/assets/common/styles/custom/lend-space/style.less
+++ b/src/assets/common/styles/custom/lend-space/style.less
@@ -158,7 +158,7 @@ body.lend-space {
     .cdk-overlay-pane {
         &.footer-slider, &.user-info {
             max-width: 50vw !important;
-    
+
             modal-dialog {
                 .close-dialog {
                     background: #313131!important;
@@ -187,18 +187,26 @@ body.lend-space {
                         color: #FFF;
                     }
 
-                    .m-tabs__link {
-                        border-bottom: 1px solid #FFF;
-                        span {  
-                            color: #FFF;
-                        }
-                        &:hover, &.active {
-                            border-bottom: 1px solid #ffcc00!important;
-                            span {  
-                                font-weight: 500;
-                                color: #ffcc00!important;
+                    .m-tabs__item {
+                        margin-right: 0;
+                        margin-left: 0;
+                        .m-tabs__link {
+                            border-bottom: 1px solid #FFF;
+                            padding-right: 30px;
+                            padding-left: 5px;
+                            span {
+                                color: #FFF;
                             }
-                        }                  
+                            &:hover, &.active {
+                                border-bottom: 1px solid #ffcc00!important;
+                                span {
+                                    color: #ffcc00!important;
+                                }
+                            }
+                        }
+                    }
+                    /deep/ country-phone-number .wrapper {
+                        background: #fff;
                     }
 
                     #content * {
